style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');

:root {
  --sidebarColor: #055a82;
  --grayContentColor: #e7e5e4;
  --grayContentColor2: #f9f9f9;
  --grayContentColor3: #555352;
  --boxShadow: 4px 5px 5px 0px rgb(0 0 0 / 50%);
  --sidebarWidth: 280px;
  --announcementHeight: 420px;
}

* {
  font-size: 20px;
  box-sizing: border-box;
  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
  margin: 0;
  background-color: var(--grayContentColor);
  min-height: 100vh;
  display: grid;
  grid-template-columns: 300px 1fr;
  grid-template-rows: auto 1fr;
  min-height: 100vh;
  margin: 0;
  overflow: hidden;
  grid-template-areas:
    'sidebar header'
    'sidebar main';
}

#header {
  grid-column: header;
}

#sidebar {
  grid-row: sidebar;
}

li {
  list-style: none;
  margin: 20px;
  display: flex;
  align-items: center;
  gap: 20px;
}

ul {
  padding: 0;
  margin: 0;
}

.container-sidebar,
button {
  background-color: var(--sidebarColor);
  color: white;
}

button,
.material-symbols-outlined,
i,
li {
  cursor: pointer;
}

.container-sidebar-contents {
  position: sticky;
  top: 0;
}

.container-settings {
  margin-top: 50px;
}

.header-sidebar {
  padding: 20px;
  font-size: 30px;
  font-weight: 600;
}

#search,
button {
  border-radius: 20px;
  border: 0;
}

#search {
  padding: 20px;
  box-sizing: border-box;
  height: 2rem;
  background-color: var(--grayContentColor);
  width: 600px;
}

button {
  padding: 20px;
  height: 2rem;
  width: 6rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 0;
}

button:hover {
  transform: scale(1.2);
  transition: all 0.5s;
}

.clicked {
  font-weight: bold;
  transition: 0.5s;
}

.container-header {
  padding: 20px;
  padding-top: 0;
  box-shadow: var(--boxShadow);
  background-color: var(--grayContentColor2);
}

#icon-header-first {
  height: 50px;
}

#icon-header-second {
  height: 70px;
}

.container-header-first,
.container-header-second,
.container-header-items,
.profile {
  display: flex;
}

.profile {
  align-items: center;
  gap: 5px;
}

.container-header-first,
.container-header-second {
  justify-content: space-between;
  align-items: flex-end;
  margin: 10px;
}

.container-header-items {
  gap: 30px;
  align-items: center;
}

.container-header-second {
  margin-top: 25px;
}

#name-header-first,
#name-header-second2,
#name-header-second1 {
  font-weight: bold;
}

#name-header-second1,
#name-header-second2 {
  margin: 5px;
}

#name-header-second1 {
  font-size: 16px;
}

#name-header-second2 {
  font-size: 25px;
}

.header-icon-font {
  font-size: 1.5rem;
}

#header-buttons {
  gap: 15px;
}

li:hover {
  margin-left: 50px;
  transition: 0.4s;
}

.container-main-header {
  display: flex;
  flex-direction: column;
  width: 100%;
}

main {
  display: grid;
  grid-template-columns: 1fr 350px;
  grid-template-rows: repeat(2, var(--announcementHeight));
  grid-template-areas:
    'projects announcements'
    'projects trending';

  overflow: auto;
  margin-left: 30px;
  grid-area: main;
  margin-top: 6px;
}

.container-projects {
  grid-column: projects;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
  grid-auto-rows: 250px;
  gap: 30px;
  margin-top: 30px;
  margin-right: 50px;
}

.container-announcements {
  grid-column: announcements;
}

.container-trending {
  grid-column: trending;
}

main > div > p {
  font-weight: bold;
  font-size: 1.2rem;
}

.project-item {
  background-color: var(--grayContentColor2);
  border-radius: 12px;
  padding: 20px;
  padding-top: 10px;
  border-left: 0.6rem solid var(--sidebarColor);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.announcements {
  border: 0;
  margin-right: 40px;
  height: calc(var(--announcementHeight) - 80px);
  background-color: var(--grayContentColor2);
  border-radius: 12px;
  padding: 30px;
  padding-top: 20px;
}

.icon-hi {
  gap: 0;
}

.project-item-text {
  color: var(--grayContentColor3);
  margin-top: 0;
  font-size: 17px;
}

.project-item-icons {
  font-size: 40px;
  text-align: right;
}

i {
  transition: transform 0.3s ease-in-out;
  margin: 3px;
}

i:hover {
  transform: rotate(360deg) scale(1.4);
}

a,
a:hover,
a:focus,
a:active {
  text-decoration: none;
  color: inherit;
  font-size: inherit;
}

.announcements-text {
  color: var(--grayContentColor3);
  font-size: 13px;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.container-announcements-headers {
  margin: 0;
  font-size: 0.8rem;
  font-weight: bold;
  margin-top: 10px;
}

